libs/extractor/tests/snapshots/snapshots/extractor__tests__style_variables-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box styleVars={{\n            variable\n        }} />\n                \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<div style={{ \"--variable\": variable }} />;\n",
}
